YUK-17587 DBEditor - Issue multiple Stop commands when control ends  - Added stop command repeat field to time refresh, smart cycle, and true cycle gears. The default value is 0, and values 0 - 5 are selectable for the field.